# baremetal-rtos

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  app_linker.ld  build.sh  linker_script.ld  project.sh  startup_stm32h7s3l8hx.c
.github/workflows/: ci_cd.yml  enforce_conventional_commits.yml
Application/: CMakeLists.txt  main.c
Application/console/: CMakeLists.txt  console.c  shell_command.h
Application/display/: CMakeLists.txt  display.c  display.h  lv_conf.h
Application/display/st7789/: st7789.c  st7789.h
Application/drivers/: CMakeLists.txt
Application/drivers/display/st7789/: st7789.c  st7789.h
Application/drivers/sensors/bme680/: bme680.c  bme680.h  bme680_defs.h  bme680_sensor.c  bme680_sensor.h
Application/inc/: adc.h  bme680_sensor.h  console.h  display.h  exti.h  includes.h  led.h  led_driver.h  ringbuffer.h  shell_command.h  system.h  systick.h  task_scheduler.h  timer.h  uart_driver.h
Application/led/: CMakeLists.txt  led.c  led.h
Application/src/: adc.c  bme680_sensor.c  console.c  display.c  exti.c  led.c  led_driver.c  ringbuffer.c  syscalls.c  sysmem.c  system.c  systick.c  task_scheduler.c  timer.c  uart_driver.c
Application/system/: CMakeLists.txt  board.c  board.h  system.c  system.h
Application/tasks/: CMakeLists.txt  task_scheduler.c
Application/tools/: CMakeLists.txt  ringbuffer.c  ringbuffer.h
Boot/: CMakeLists.txt  boot_linker.ld  main.c
HAL/: CMakeLists.txt
HAL/inc/: stm32h7rs_hal.h  stm32h7rs_hal_dma.h  stm32h7rs_hal_gpio.h  stm32h7rs_hal_i2c.h  stm32h7rs_hal_rcc.h  stm32h7rs_hal_spi.h  stm32h7rs_hal_tim.h  stm32h7rs_hal_usart.h  stm32h7rs_hal_xspi.h
HAL/src/: stm32h7rs_hal.c  stm32h7rs_hal_dma.c  stm32h7rs_hal_gpio.c  stm32h7rs_hal_i2c.c  stm32h7rs_hal_rcc.c  stm32h7rs_hal_spi.c  stm32h7rs_hal_tim.c  stm32h7rs_hal_usart.c  stm32h7rs_hal_xspi.c
RTOS/: CMakeLists.txt
cmake/: stm32h7rs_toolchain.cmake  update_git_info.cmake
rtos/: CMakeLists.txt  kernel.c  kernel_isr.c
rtos/include/: config.h  kernel.h
scripts/: print_size.sh
support/: .commitlintrc.yml  git_info.h.in  openocd.cfg
test/: ceedling  ceedling.yml  compile_commands.json
test/coverage/: gcovr
test/unit/: test_hello_world.c
